[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/button.gd" type="Script" id=1]
[ext_resource path="res://resources/buttons/host button.png" type="Texture" id=2]
[ext_resource path="res://resources/buttons/host button hover.png" type="Texture" id=4]

[node name="button" type="Control"]
anchor_bottom = 0.083
margin_right = 527.0
margin_bottom = 105.36
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
normal_texture = ExtResource( 2 )
hover_texture = ExtResource( 4 )

[node name="normal" type="TextureRect" parent="."]
margin_left = 43.0
margin_top = 43.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hover" type="TextureRect" parent="."]
margin_right = 516.0
margin_bottom = 190.0
rect_pivot_offset = Vector2( 258, 95 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="gui_input" from="." to="." method="_on_button_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_button_mouse_exited"]
